--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/researchAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/researchAddress.yml
@@ -5,7 +5,7 @@ question_advice: |
 
    - the town or city where the research will happen
    - more than one address if appropriate
-   - a description of the research envrionment, eg whether the research will happen in a lab, at a participants home,
+   - a description of the research environment, eg whether the research will happen in a lab, at a participants home,
      or in a neutral location like a community centre
 type: textbox_large
 max_length_in_words: 100
