--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/niceToHaveRequirementsParticipants.yml
@@ -8,7 +8,7 @@ question_advice: |
 
   For example: have experience recruiting participants with hernias.
 
-  **The supplier can:**
+  ##The supplier can:
 
 list_item_name: 'nice-to-have requirement'
 number_of_items: 20
