--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
@@ -7,13 +7,13 @@ question_advice: |
   - the type of session you want to run, such as webinar, phone conference or meeting
   - the date and time of your session
 
-  **When to run a question and answer session**
+  ##When to run a question and answer session
 
   If your requirements are open for 1 week, you must hold your session within the first 2 working days of publishing.
 
   If your requirements are open for 2 weeks, you must hold your session within the first 5 working days of publishing.
 
-  **Information you should include**
+  ##Information you should include
 
   Depending on the type of session you choose, you could also include:
 
