--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/essentialRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/essentialRequirementsOutcomes.yml
@@ -8,7 +8,7 @@ question_advice: |
 
   For example: have experience designing services for users with low digital literacy.
 
-  **The supplier must:**
+  ##The supplier must:
 
 list_item_name: 'essential requirement'
 number_of_items: 20
