--- a/frameworks/digital-outcomes-and-specialists-4/questions/briefs/essentialRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/briefs/essentialRequirementsSpecialists.yml
@@ -8,7 +8,7 @@ question_advice: |
 
   For example: have experience designing services for users with low digital literacy.
 
-  **The specialist must:**
+  ##The specialist must:
 
 list_item_name: 'essential requirement'
 number_of_items: 20
