--- a/frameworks/g-cloud-12/messages/urls.yml
+++ b/frameworks/g-cloud-12/messages/urls.yml
@@ -1,6 +1,6 @@
 framework_agreement_url: "https://www.gov.uk/government/publications/g-cloud-12-framework-agreement"
 
-framework_agreement_pdf_url: "https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/810459/g-cloud-12-framework-agreement.pdf/__placeholder__"
+framework_agreement_pdf_url: "https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/915760/G-Cloud-12-Framework-Agreement.pdf"
 
 supplier_guide_url: "https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply"
 
