don't -> do not

--- a/frameworks/digital-outcomes-and-specialists-5/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/edit_brief.yml
@@ -65,7 +65,7 @@
     There are 3 stages to finding the supplier that best meets your needs.
 
     ##1\. View suppliers who applied
-    When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
+    When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who do not meet your essential skills and experience are excluded.
 
     ##2\. Create a shortlist
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
@@ -102,7 +102,7 @@
     There are 3 stages to finding the specialist that best meets your needs.
 
     ##1\. View specialists who applied
-    When specialists apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Specialists who don’t meet your essential skills and experience are excluded.
+    When specialists apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Specialists who do not meet your essential skills and experience are excluded.
 
     ##2\. Create a shortlist
     Once you have a list of eligible specialists, you can exclude the specialists who:
@@ -135,7 +135,7 @@
     There are 3 stages to finding the supplier that best meets your needs.
 
     ##1\. View suppliers who applied
-    When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
+    When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who do not meet your essential skills and experience are excluded.
 
     ##2\. Create a shortlist
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
