--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/essentialRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/essentialRequirementsOutcomes.yml
@@ -2,7 +2,7 @@ name: 'Essential skills and experience'
 id: essentialRequirements
 question: 'Essential skills and experience'
 question_advice: |
-  When suppliers apply they declare which of your essential skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
+  When suppliers apply they declare which of your essential skills and experience they have. Suppliers who do not meet your essential skills and experience are excluded.
 
   List all the specific skills or experience the supplier must have.
 
