--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/essentialRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/essentialRequirementsSpecialists.yml
@@ -2,7 +2,7 @@ name: 'Essential skills and experience'
 id: essentialRequirements
 question: 'Essential skills and experience'
 question_advice: |
-  Suppliers who don’t have all the essential skills you list here will be automatically notified that their application was unsuccessful.
+  Suppliers who do not have all the essential skills you list here will be automatically notified that their application was unsuccessful.
 
   List all the specific skills or experience the specialist must have.
 
