--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/evaluationTypeSpecialists.yml
@@ -6,7 +6,7 @@ question_advice: |
 
   Choose additional ways to assess specialists.
 
-  You can only use the methods you choose here, so if you don’t select an interview, you won’t be able to interview specialists.
+  You can only use the methods you choose here, so if you do not select an interview, you won’t be able to interview specialists.
 
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
