--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/modernSlaveryStatementOptional.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/modernSlaveryStatementOptional.yml
@@ -1,6 +1,6 @@
 name: Modern slavery statement optional
 question: |
-  You don’t need to publish a slavery and human trafficking statement to meet the modern slavery requirements for Digital Outcomes and Specialists&nbsp;5.
+  You do not need to publish a slavery and human trafficking statement to meet the modern slavery requirements for Digital Outcomes and Specialists&nbsp;5.
 
   You can choose to upload a statement.
 question_advice: |
