won't -> will not

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/evaluationTypeParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/evaluationTypeParticipants.yml
@@ -6,7 +6,7 @@ question_advice: |
 
   Choose additional ways to assess suppliers.
 
-  You can only use the methods you choose here, so if you do not select a reference now, you won’t be able to ask for one later.
+  You can only use the methods you choose here, so if you do not select a reference now, you will not be able to ask for one later.
 
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
