haven't -> have not

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/agileCoach.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/agileCoach.yml
@@ -11,6 +11,6 @@ questions:
   - agileCoachLocations
   - agileCoachDayRate
 
-empty_message: You haven’t added an agile coach
+empty_message: You have not added an agile coach
 
 hint: Help individuals, teams and managers be as effective as possible by embedding an agile culture.
