--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/productManager.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/productManager.yml
@@ -11,6 +11,6 @@ questions:
   - productManagerLocations
   - productManagerDayRate
 
-empty_message: You haven’t added a product manager
+empty_message: You have not added a product manager
 
 hint: Lead the delivery and continuous improvement of one or more digital products or platforms.
