--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/dataScientist.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/dataScientist.yml
@@ -11,6 +11,6 @@ questions:
   - dataScientistLocations
   - dataScientistDayRate
 
-empty_message: You haven’t added a data scientist
+empty_message: You have not added a data scientist
 
 hint: Identify complex business problems while working with policy and operations teams to understand where data can add value.
