--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/developer.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/developer.yml
@@ -11,6 +11,6 @@ questions:
   - developerLocations
   - developerDayRate
 
-empty_message: You haven’t added a developer
+empty_message: You have not added a developer
 
 hint: Build software that supports user needs. Continually improve the service by identifying new tools and techniques, removing technical bottlenecks, and adapting and maintaining code.
