--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/qualityAssurance.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/qualityAssurance.yml
@@ -11,6 +11,6 @@ questions:
   - qualityAssuranceLocations
   - qualityAssuranceDayRate
 
-empty_message: You haven’t added a quality assurance analyst
+empty_message: You have not added a quality assurance analyst
 
 hint: Ensure the quality of the digital service by testing it manually and writing automated tests covering a range of conditions.
