--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/serviceManager.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/serviceManager.yml
@@ -11,6 +11,6 @@ questions:
   - serviceManagerLocations
   - serviceManagerDayRate
 
-empty_message: You haven’t added a service manager
+empty_message: You have not added a service manager
 
 hint: Develop and deliver an effective user-focused digital service. Manage the full product lifecycle, including user research, design, delivery and continuous improvement.
