--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/testingAndAuditing.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/testingAndAuditing.yml
@@ -10,4 +10,4 @@ any_of: capability
 questions:
   - testingAndAuditingTypes
 
-empty_message: You haven’t added any testing and auditing capabilities
+empty_message: You have not added any testing and auditing capabilities
