--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userExperienceAndDesign.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userExperienceAndDesign.yml
@@ -10,4 +10,4 @@ any_of: capability
 questions:
   - userExperienceAndDesignTypes
 
-empty_message: You haven’t added any user experience and design capabilities
+empty_message: You have not added any user experience and design capabilities
