--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearch.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearch.yml
@@ -10,4 +10,4 @@ any_of: capability
 questions:
   - userResearchTypes
 
-empty_message: You haven’t added any user research capabilities
+empty_message: You have not added any user research capabilities
