--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearcher.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearcher.yml
@@ -11,6 +11,6 @@ questions:
   - userResearcherLocations
   - userResearcherDayRate
 
-empty_message: You haven’t added a user researcher
+empty_message: You have not added a user researcher
 
 hint: Design, conduct and analyse user research using a range of techniques, eg one-to-one interviews or usability tests.
