--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/webOperations.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/webOperations.yml
@@ -11,6 +11,6 @@ questions:
   - webOperationsLocations
   - webOperationsDayRate
 
-empty_message: You haven’t added a web operations engineer
+empty_message: You have not added a web operations engineer
 
 hint: Run the production systems to help the development team build software that is easy to operate, scale and secure.
