Update become a supplier meassages to use govuk-frontend styles
We want to use GOV.UK Design System styles everywhere. This commit
updates the 'become a supplier' messages for DOS5 and G12 to use pure
Markdown lists and paragraphs; this means that the content loaders'
GOVUKFrontendExtension will assign the correct classes to the resultant
HTML.

--- a/frameworks/digital-outcomes-and-specialists-5/messages/become-a-supplier.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/messages/become-a-supplier.yml
@@ -1,38 +1,32 @@
 coming: |
-  <div class="explanation-list">
-    Digital Outcomes and Specialists is opening for applications.<br />
-    You will be able to apply to sell:
-    <ul class="list-bullet">
-      <li>digital outcomes, for example a team to build a service</li>
-      <li>digital specialists, for example an individual developer or user researcher</li>
-      <li>user research studios</li>
-      <li>user research participants</li>
-    </ul>
-  </div>
+  Digital Outcomes and Specialists is opening for applications.
+
+  You will be able to apply to sell:
+
+  - digital outcomes, for example a team to build a service
+  - digital specialists, for example an individual developer or user researcher
+  - user research studios
+  - user research participants
 
 open: |
-  <div class="explanation-list">
-    Digital Outcomes and Specialists is open for applications.<br />
-    You can apply to sell:
-    <ul class="list-bullet">
-      <li>digital outcomes, for example a team to build a service</li>
-      <li>digital specialists, for example an individual developer or user researcher</li>
-      <li>user research studios</li>
-      <li>user research participants</li>
-    </ul>
-  </div>
+  Digital Outcomes and Specialists is open for applications.
+
+  You can apply to sell:
+
+  - digital outcomes, for example a team to build a service
+  - digital specialists, for example an individual developer or user researcher
+  - user research studios
+  - user research participants
 
 pending: &can_not_apply |
-  <div class="explanation-list">
-    Digital Outcomes and Specialists is closed for applications.<br />
-    You will be able to apply to sell:
-    <ul class="list-bullet">
-      <li>digital outcomes, for example a team to build a service</li>
-      <li>digital specialists, for example an individual developer or user researcher</li>
-      <li>user research studios</li>
-      <li>user research participants</li>
-    </ul>
-  </div>
+  Digital Outcomes and Specialists is closed for applications.
+
+  You will be able to apply to sell:
+
+  - digital outcomes, for example a team to build a service
+  - digital specialists, for example an individual developer or user researcher
+  - user research studios
+  - user research participants
 
 standstill: *can_not_apply
 
